--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,6 +1,6 @@
 {
   "schemaVersion": "1.0.0",
-  "projectStateVersion": 125,
+  "projectStateVersion": 137,
   "summary": "Next build scope expanded to include a surgical Accepting Gifts overhaul: replace the old Accepting Gifts gameplay/progression with a fixed 12-level sequence (2+8, 3+8, 2+9, 3+9, 4+8, 4+9, 5+8, 5+9, 6+8, 6+9, 7+8, 7+9), dynamic per-level attempt input ranges, baseline/levelPlayed tracking with win/lose progression/rollback rules, and Match History table note formatting to include levelPlayed | baselineLevel | final score (e.g., \"3+9 | 3+9 | 7-4\"), while keeping changes isolated from other app areas.",
   "architectural_notes": [
     "Straight Shot is a drill scored by total strokes/shots (goal: 20 or under) with mode-specific stats including scratches (+2) and a moving average across sessions; ensure UI copy avoids calling it 'straight pool'.",
@@ -1723,6 +1723,142 @@
         "REQ-234"
       ],
       "version": 1
+    },
+    {
+      "id": "feature-update-frontend-src-components-players-apaaggregatecharts-tsx-so-the-official-apa-charts-do-not-use-the-unified-merged-datasets-ppiappichartdata-and-matchresultschartdata-instead-keep-the-five-independent-series-arrays-ppiseries-appiseries-yourpointsseries-opponentpointsseries-defensiveshotsseries-as-the-source-of-truth-and-feed-the-correct-series-into-each-plotted-line-so-the-graphs-render-when-series-data-exists",
+      "title": "Update `frontend/src/components/players/ApaAggregateCharts.tsx` so the Official APA charts do not use the unified merged datasets (`ppiAppiChartData` and `matchResultsChartData`). Instead, keep the five independent series arrays (`ppiSeries`, `appiSeries`, `yourPointsSeries`, `opponentPointsSeries`, `defensiveShotsSeries`) as the source-of-truth and feed the correct series into each plotted `<Line>` so the graphs render when series data exists.",
+      "reqIds": [
+        "REQ-235"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-keep-and-do-not-remove-the-existing-console-only-debug-logs-in-frontend-src-components-players-apaaggregatecharts-tsx-that-output-the-final-five-per-series-arrays-ppi-appi-your-points-opponent-points-defensive-shots-add-additional-console-only-logs-immediately-before-rendering-each-line-if-needed-to-confirm-the-exact-data-array-each-line-receives-do-not-add-any-on-screen-debug-ui",
+      "title": "Keep (and do not remove) the existing console-only debug logs in `frontend/src/components/players/ApaAggregateCharts.tsx` that output the final five per-series arrays (PPI, aPPI, Your Points, Opponent Points, Defensive Shots). Add additional console-only logs immediately before rendering each `<Line>` if needed to confirm the exact `data` array each line receives. Do not add any on-screen debug UI.",
+      "reqIds": [
+        "REQ-236"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-keep-the-change-set-tightly-scoped-to-the-official-apa-stats-chart-pipeline-by-modifying-only-these-two-files-frontend-src-components-players-apaaggregatecharts-tsx-and-frontend-src-lib-apa-apaaggregatestats-ts-do-not-change-match-history-code-routing-or-any-other-components-pages",
+      "title": "Keep the change set tightly scoped to the Official APA stats/chart pipeline by modifying only these two files: `frontend/src/components/players/ApaAggregateCharts.tsx` and `frontend/src/lib/apa/apaAggregateStats.ts`. Do not change Match History code, routing, or any other components/pages.",
+      "reqIds": [
+        "REQ-237"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-update-frontend-src-components-players-apaaggregatecharts-tsx-so-the-official-apa-charts-no-longer-build-or-use-unified-merged-datasets-ppiappichartdata-matchresultschartdata-or-any-equivalent-timestamp-merged-arrays-instead-keep-the-five-independent-series-arrays-ppiseries-appiseries-yourpointsseries-opponentpointsseries-defensiveshotsseries-as-the-source-of-truth-and-wire-recharts-so-each-plotted-line-renders-from-its-own-series-dataset-so-missing-values-for-one-metric-never-suppress-rendering-of-another-metric",
+      "title": "Update `frontend/src/components/players/ApaAggregateCharts.tsx` so the Official APA charts no longer build or use unified/merged datasets (`ppiAppiChartData`, `matchResultsChartData`, or any equivalent timestamp-merged arrays). Instead, keep the five independent series arrays (`ppiSeries`, `appiSeries`, `yourPointsSeries`, `opponentPointsSeries`, `defensiveShotsSeries`) as the source of truth and wire Recharts so each plotted `<Line>` renders from its own series dataset (so missing values for one metric never suppress rendering of another metric).",
+      "reqIds": [
+        "REQ-238"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-add-console-only-debug-logs-in-frontend-src-components-players-apaaggregatecharts-tsx-immediately-before-each-line-is-rendered-so-it-is-possible-to-verify-the-exact-dataset-being-passed-into-that-specific-line-including-the-array-reference-and-its-length-keep-existing-debug-logs-that-print-the-final-five-per-series-arrays-and-do-not-add-any-on-screen-debug-ui",
+      "title": "Add console-only debug logs in `frontend/src/components/players/ApaAggregateCharts.tsx` immediately before each `<Line>` is rendered so it is possible to verify the exact dataset being passed into that specific line (including the array reference and its length). Keep existing debug logs that print the final five per-series arrays, and do not add any on-screen debug UI.",
+      "reqIds": [
+        "REQ-239"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-update-only-frontend-src-components-players-apaaggregatecharts-tsx-to-build-a-single-unified-chart-dataset-keyed-by-the-numeric-timestamp-and-containing-all-numeric-metric-fields-used-by-the-existing-charts-ppi-appi-yourpoints-opponentpoints-defensiveshots-without-changing-how-those-metric-values-are-computed-upstream",
+      "title": "Update only `frontend/src/components/players/ApaAggregateCharts.tsx` to build a single unified chart dataset keyed by the numeric `timestamp` and containing all numeric metric fields used by the existing charts (ppi, appi, yourPoints, opponentPoints, defensiveShots) without changing how those metric values are computed upstream.",
+      "reqIds": [
+        "REQ-240"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-fix-recharts-usage-in-frontend-src-components-players-apaaggregatecharts-tsx-by-passing-the-unified-dataset-to-each-linechart-via-the-data-prop-e-g-linechart-data-unifieddata-and-removing-any-incorrect-data-props-attached-directly-to-line-components",
+      "title": "Fix Recharts usage in `frontend/src/components/players/ApaAggregateCharts.tsx` by passing the unified dataset to each `<LineChart>` via the `data` prop (e.g., `<LineChart data={unifiedData}>`) and removing any incorrect `data={...}` props attached directly to `<Line>` components.",
+      "reqIds": [
+        "REQ-241"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-change-the-x-axis-for-both-charts-in-frontend-src-components-players-apaaggregatecharts-tsx-to-plot-on-numeric-timestamp-values-use-type-number-and-an-appropriate-time-scale-and-use-date-formatting-only-for-tick-labels-and-tooltips-so-multiple-matches-on-the-same-calendar-day-do-not-collapse-into-a-single-x-category",
+      "title": "Change the x-axis for both charts in `frontend/src/components/players/ApaAggregateCharts.tsx` to plot on numeric `timestamp` values (use `type=\"number\"` and an appropriate time scale) and use date formatting only for tick labels and tooltips so multiple matches on the same calendar day do not collapse into a single x category.",
+      "reqIds": [
+        "REQ-242"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-preserve-the-existing-series-keys-and-legend-labels-in-frontend-src-components-players-apaaggregatecharts-tsx-so-that-the-rendered-legends-show-the-same-english-names-as-currently-intended-ppi-appi-your-points-opponent-points-defensive-shots",
+      "title": "Preserve the existing series keys and legend labels in `frontend/src/components/players/ApaAggregateCharts.tsx` so that the rendered legends show the same English names as currently intended: PPI, aPPI, Your Points, Opponent Points, Defensive Shots.",
+      "reqIds": [
+        "REQ-243"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-in-frontend-src-lib-apa-apaaggregatestats-ts-set-each-apa-datapoint-s-timestamp-using-geteffectivematchtimestamp-match-from-frontend-src-lib-matches-effectivematchdate-ts-for-both-apa-practice-and-official-apa-matches-instead-of-using-match-datetime-directly",
+      "title": "In `frontend/src/lib/apa/apaAggregateStats.ts`, set each APA datapoint’s `timestamp` using `getEffectiveMatchTimestamp(match)` (from `frontend/src/lib/matches/effectiveMatchDate.ts`) for both APA Practice and Official APA matches, instead of using `match.dateTime` directly.",
+      "reqIds": [
+        "REQ-244"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-in-frontend-src-components-players-apaaggregatecharts-tsx-render-both-charts-using-one-shared-unified-dataset-passed-to-linechart-data-and-ensure-each-line-binds-to-that-shared-dataset-using-datakey-and-name-only-no-per-line-data-stroke-type-connectnulls-or-other-props",
+      "title": "In `frontend/src/components/players/ApaAggregateCharts.tsx`, render both charts using one shared unified dataset passed to `<LineChart data={...}>`, and ensure each `<Line>` binds to that shared dataset using `dataKey` and `name` only (no per-line `data`, `stroke`, `type`, `connectNulls`, or other props).",
+      "reqIds": [
+        "REQ-245"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-update-apa-aggregate-charts-styling-in-frontend-src-components-players-apaaggregatecharts-tsx-so-all-five-series-lines-render-with-stroke-000-and-strokewidth-2-and-series-differentiation-is-done-by-dot-shape-only-ppi-circle-dot-appi-square-dot-your-points-circle-dot-opponent-points-square-dot-defensive-shots-triangle-dot",
+      "title": "Update APA aggregate charts styling in `frontend/src/components/players/ApaAggregateCharts.tsx` so all five series lines render with `stroke=\"#000\"` and `strokeWidth={2}`, and series differentiation is done by dot shape only: PPI (circle dot), aPPI (square dot), Your Points (circle dot), Opponent Points (square dot), Defensive Shots (triangle dot).",
+      "reqIds": [
+        "REQ-246"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-update-straight-shot-trend-chart-styling-in-frontend-src-components-straight-shot-straightshottrendchart-tsx-so-the-line-uses-stroke-000-strokewidth-2-and-dot-false-the-bar-uses-fill-000-and-stroke-000-the-tooltip-uses-cursor-false-and-the-line-continues-to-use-the-existing-trenddata-dataset",
+      "title": "Update Straight Shot Trend chart styling in `frontend/src/components/straight-shot/StraightShotTrendChart.tsx` so the line uses `stroke=\"#000\"`, `strokeWidth={2}`, and `dot={false}`; the bar uses `fill=\"#000\"` and `stroke=\"#000\"`; the tooltip uses `cursor={false}`; and the line continues to use the existing `trendData` dataset.",
+      "reqIds": [
+        "REQ-247"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-update-straight-shot-histogram-styling-in-frontend-src-components-straight-shot-straightshothistogram-tsx-so-the-histogram-bar-uses-fill-000-and-stroke-000-with-histogram-behavior-unchanged",
+      "title": "Update Straight Shot Histogram styling in `frontend/src/components/straight-shot/StraightShotHistogram.tsx` so the histogram bar uses `fill=\"#000\"` and `stroke=\"#000\"`, with histogram behavior unchanged.",
+      "reqIds": [
+        "REQ-248"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-change-match-history-default-view-mode-in-frontend-src-pages-history-matchhistorypage-tsx-so-the-initial-viewmode-state-defaults-to-table-view-by-setting-usestate-cards-table-table",
+      "title": "Change Match History default view mode in `frontend/src/pages/history/MatchHistoryPage.tsx` so the initial `viewMode` state defaults to table view by setting `useState<'cards' | 'table'>('table')`.",
+      "reqIds": [
+        "REQ-249"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-in-frontend-src-components-players-apaaggregatecharts-tsx-update-the-recharts-line-stroke-colors-visual-only-exactly-as-follows-without-changing-any-chart-data-generation-keys-labels-or-computations-ppi-appi-trend-chart-ppi-line-stroke-000-strokewidth-2-appi-line-stroke-2563eb-strokewidth-2-match-results-chart-your-points-line-stroke-000-strokewidth-2-opponent-points-line-stroke-2563eb-strokewidth-2-defensive-shots-line-stroke-7c3aed-strokewidth-2",
+      "title": "In `frontend/src/components/players/ApaAggregateCharts.tsx`, update the Recharts `<Line />` stroke colors (visual-only) exactly as follows, without changing any chart data generation, keys, labels, or computations:\n- PPI & aPPI Trend chart:\n  - PPI line: `stroke=\"#000\"`, `strokeWidth={2}`\n  - aPPI line: `stroke=\"#2563eb\"`, `strokeWidth={2}`\n- Match Results chart:\n  - Your Points line: `stroke=\"#000\"`, `strokeWidth={2}`\n  - Opponent Points line: `stroke=\"#2563eb\"`, `strokeWidth={2}`\n  - Defensive Shots line: `stroke=\"#7c3aed\"`, `strokeWidth={2}`",
+      "reqIds": [
+        "REQ-250"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-in-frontend-src-components-players-apaaggregatecharts-tsx-set-connectnulls-true-on-every-recharts-line-used-in-both-the-ppi-appi-trend-chart-and-the-match-results-chart",
+      "title": "In `frontend/src/components/players/ApaAggregateCharts.tsx`, set `connectNulls={true}` on every Recharts `<Line />` used in both the PPI & aPPI Trend chart and the Match Results chart.",
+      "reqIds": [
+        "REQ-251"
+      ],
+      "version": 1
     }
   ],
   "new_feature_requests": [
@@ -2283,6 +2419,12 @@
     {
       "id": "AR-125",
       "summary": "Add console-only debug taps in ApaAggregateCharts.tsx immediately before each <Line> receives its data prop, logging the final per-series arrays (ppiSeries, appiSeries, yourPointsSeries, opponentPointsSeries, defensiveShotsSeries); keep the existing debug tap in extractPlayerApaMatches unchanged.",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-126",
+      "summary": "Frontend-only UI updates: (1) APA charts visual differentiation via dot shapes with black strokes; (2) Straight Shot trend/histogram charts use black styling; (3) Match History default view set to table.",
       "reqIds": [],
       "status": "pending"
     }
